--- a/Swiggy/templates/s_admin/open_area.html
+++ b/Swiggy/templates/s_admin/open_area.html
@@ -52,7 +52,7 @@
                      <table align="center" border="2" bgcolor="#f5deb3" width="500">
                     <tr>
                         <th colspan="2" height="60" style="text-align: center;font-size: 30px">
-                            State Update Operations
+                            Area Update Operations
                         </th>
                     </tr>
                         <tr>
